public/css/style.css
@charset "UTF-8";

/* SAGE2 is available for use under the SAGE2 Software License
 *
 * University of Illinois at Chicago's Electronic Visualization Laboratory (EVL)
 * and University of Hawai'i at Manoa's Laboratory for Advanced Visualization and
 * Applications (LAVA)
 *
 * See full text, terms and conditions in the LICENSE.txt included file
 *
 * Copyright (c) 2014
 */

/* CSS Document */

* {
	margin: 0;
	padding: 0;
}

p {
	font-family: Arimo, Helvetica, sans-serif;
}

body {
	background: #FFFFFF;
	width: 100%;
	height: 100%;
	cursor: none;
	overflow: hidden;
}

#background {
	position: absolute;
}

#main {
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
}

#upperBar {
	position: absolute;
	width: 100%;
	background: rgba(0, 0, 0, 0.5);
}

.windowItem {
	position: absolute;
	border: 1px solid #000000;
	box-shadow: 8px 4px 15px #222222;

	opacity: 1;
	-webkit-transition: opacity 0.2s ease-in;
	-moz-transition: opacity 0.2s ease-in;
	-ms-transition: opacity 0.2s ease-in;
	-o-transition: opacity 0.2s ease-in;
	transition: opacity 0.2s ease-in;
}

.windowDisappear {
	opacity: 0;
}

.windowItemNoBorder {
	border: 1px solid rgba(0, 0, 0, 0);
	box-shadow: none;
}

.windowTitle {
	position: absolute;
	background-color: #666666;
	border: solid 1px #000000;
	overflow: hidden;
	box-shadow: 8px 4px 15px #222222;
}

.windowControls {
	position: absolute;
	background-color: rgba(0, 0, 0, 0);
	overflow: hidden;
}

.pointerItem {
	position: absolute;
	display: block;

	/* try to promote the pointer to a layer for performance */
	will-change: transform;
}

.sageItem {
	display: block;
}

.widgetBackground {
	fill: rgba(150, 166, 189, 0.8);
	stroke: rgba(230, 230, 230, 1);
	stroke-width: 1;
}

.widgetText {
	text-anchor: middle;
	font-family: Arimo, Helvetica, sans-serif;
	fill: #495587;
}

.widgetLabel {
	text-anchor: middle;
	font-family: Arimo, Helvetica, sans-serif;
	fill: rgba(250, 250, 250, 1);
}

.textInput {
	font-family: Arimo, Helvetica, sans-serif;
	fill: rgba(59, 80, 109, 1);
	font-weight: lighter;
	font-style: normal;
}

.dataSharingArea {
	position: absolute;
	left: 0;
	top: 0;
	overflow: hidden;
	background-color: rgba(255, 255, 255, 0.75);
	box-shadow: 8px 4px 15px #222222;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	-webkit-transform-origin: 0 0 0;
	-moz-transform-origin: 0 0 0;
	-o-transform-origin: 0 0 0;
	-ms-transform-origin: 0 0 0;
	transform-origin: 0 0 0;
}

.dataSharingOverlay {
	position: absolute;
	left: 0;
	top: 0;
	overflow: hidden;
	-webkit-transform-origin: 0 0 0;
	-moz-transform-origin: 0 0 0;
	-o-transform-origin: 0 0 0;
	-ms-transform-origin: 0 0 0;
	transform-origin: 0 0 0;
}

.dataSharingTitle {
	position: absolute;
	left: 0;
	top: 0;
	overflow: hidden;
	border: 4px solid #000000;
	border-bottom: none;
	box-shadow: 8px 4px 15px #222222;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	-webkit-transform-origin: 0 0 0;
	-moz-transform-origin: 0 0 0;
	-o-transform-origin: 0 0 0;
	-ms-transform-origin: 0 0 0;
	transform-origin: 0 0 0;
}

.partitionArea {
	position: absolute;
	left: 0;
	top: 0;
	overflow: hidden;
	border: 4px solid #14B4C8;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	-webkit-transform-origin: 0 0 0;
	-moz-transform-origin: 0 0 0;
	-o-transform-origin: 0 0 0;
	-ms-transform-origin: 0 0 0;
	transform-origin: 0 0 0;
}

.partitionTitle {
	position: absolute;
	left: 0;
	top: 0;
	overflow: hidden;
	border: 4px solid #14B4C8;
	background-color: #1195A6;
	border-bottom: none;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	-webkit-transform-origin: 0 0 0;
	-moz-transform-origin: 0 0 0;
	-o-transform-origin: 0 0 0;
	-ms-transform-origin: 0 0 0;
	transform-origin: 0 0 0;
}

.stateObject {
	color: #FFFFFF;
}

.stateObject[state='hover'] {
	color: #EECC00;
}

.stateObject[state='unsynced'] {
	color: #727272;
}

.stateNumber {
	color: #AF7DFF;
}

.stateNumber[synced=false] {
	color: #727272;
}

.stateBoolean {
	color: #FC1F70;
}

.stateBoolean[synced=false] {
	color: #727272;
}

.stateString {
	color: #E6DC6D;
}

.stateString[synced=false] {
	color: #727272;
}

.stateNull {
	color: #A4E402;
}

.stateNull[synced=false] {
	color: #727272;
}

.stateArray {
	color: #60D9F1;
}

.stateArray[synced=false] {
	color: #727272;
}

